Fix header layout bug

--- a/sass/base/_body.scss
+++ b/sass/base/_body.scss
@@ -1,5 +1,6 @@
 body {
   @include type(body);
+  position: relative;
   color: cc(white);
   background-color: cc(grey, darker);
 
